testsuite/single/tests/compiler/fail/bad_return2.lpc
TYPETEST

int foo() {
    return "hi";
}
